--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1762,7 +1762,7 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-qPkjzv8clE {
-  background-image: url("../../../assets/images/mbr-1657x1080.jpg");
+  background-image: url("https://guilhercampos.github.io/site/assets/images/mbr-1657x1080.jpg");
 }
 .cid-qPkjzv8clE h1 {
   color: #616161;
@@ -1785,7 +1785,7 @@ body {
   color: #b2ccd2;
 }
 .cid-qPkjBtu34z {
-  background-image: url("../../../assets/images/03.jpg");
+  background-image: url("https://guilhercampos.github.io/site/assets/images/03.jpg");
 }
 .cid-qPkjBtu34z .icons-media-container {
   display: flex;
